--- a/app/view/cargandoResultados.tpl.html
+++ b/app/view/cargandoResultados.tpl.html
@@ -1,6 +1,6 @@
-<div ng-controller="CargandoController" ng-init="iniciarCargaInforme()">
+<div ng-controller="CargandoController" ng-init="iniciarCargaCombinacion()">
     <h2>Generando combinación...</h2>
     <progressbar max="100" value="cargaInforme">
-        <span style="color:black; white-space:nowrap;">{{cargaInforme}} %</span>
+        <span style="color:black; white-space:nowrap;">{{cargaCombinacion}} %</span>
     </progressbar>
 </div>
