--- a/app/view/resultadoCombinacion.tpl.html
+++ b/app/view/resultadoCombinacion.tpl.html
@@ -6,4 +6,5 @@
     </li>
 
     <h3>¡Suerte con el sorteo!</h3>
+    <h4 ng-show="acelerometroDisponible">Puedes obtener otra combinación agitando el dispositivo.</h4>
 </div>
